--- a/css/products.css
+++ b/css/products.css
@@ -10,12 +10,15 @@
   --gray-clear: #bbbbbb;
   --gray-strong: #777777;
 }
-/*================== header ==========================*/
+/*================== base ==========================*/
 header {
   background: var(--background);
   padding: 20px 0;
 }
-.caixa {
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+.box {
   position: relative;
   width: 940px;
   margin: 0 auto;
@@ -36,7 +39,7 @@ nav a {
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
   color: var(--black);
-  font-size: 28px;
+  font-size: 22px;
   font-weight: bold;
   text-decoration: none;
 }
@@ -83,6 +86,11 @@ nav a:hover {
   font-size: 22px;
   margin-top: 10px;
 }
+.p-price {
+  font-size: 22px;
+  font-weight: bold;
+  margin-top: 10px;
+}
 /*================== footer ==========================*/
 footer {
   text-align: center;
@@ -94,64 +102,198 @@ footer {
   font-size: 13px;
   margin: 20px 0 0;
 }
+/*================== profecional ==========================*/
+.input-base {
+  display: block;
+  margin: 0 0 20px;
+  padding: 10px 25px;
+  width: 50%;
+}
+.checkbox {
+  margin: 20px;
+}
+.send {
+  width: 40%;
+  padding: 15px 0;
+  background: orange;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  transition: 1s all;
+  cursor: pointer;
+}
+.send:hover {
+  background: var(--gold);
+  transform: scale(1.2);
+}
 /*================== contacts ==========================*/
 .contact {
   width: 940px;
   margin: 40px;
 }
-
-.contact label,
-.input-group legend {
-  display: block;
-  margin: 0 0 5px;
-  font-size: 20px;
-}
-.area,
-textarea {
+.input-base {
   display: block;
   margin: 0 0 20px;
-  padding: 10px 20px;
+  padding: 10px 25px;
   width: 50%;
-  border: 1px solid #ffee00;
 }
-.input-group {
-  margin: 0 0 20px;
+.checkbox {
+  margin: 20px 0;
 }
-.newsletter {
-  margin: 0 0 20px;
-}
-/*================== button ==========================*/
-.button {
-  margin: 20px 0 0;
-  width: 30%;
-  padding: 10px 20px;
-  font-size: 24px;
-  display: inline-block;
+.send {
+  width: 40%;
+  padding: 15px 0;
   background: var(--gold);
   color: var(--white);
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
   border-radius: 5px;
-  transition: 1s;
-}
-
-.button:hover {
+  transition: 1s all;
   cursor: pointer;
+}
+.send:hover {
+  background: darkorange;
   transform: scale(1.2);
 }
+/*================== etc ==========================*/
 
-.operation {
-  width: 940px;
-  margin: 0 auto 40px;
+/* input padrao */
+main {
+}
+form {
+  margin: 40px 0;
+}
+form label,
+form legend {
+  display: block;
+  font-size: 20px;
+  margin: 0 0 10px;
 }
 /*================== table ==========================*/
 table {
-  margin: 10px 0 0;
+  margin: 20px 0 40px;
 }
-th {
-  background: var(--gray-strong);
-  color: var(--white);
+thead {
+  background: #555555;
+  color: white;
+  font-weight: bold;
 }
 td,
 th {
   border: 1px solid var(--black);
-  padding: 5px 20px;
+  padding: 8px 15px;
+}
+/*================== banner ==========================*/
+.banner {
+  width: 100%;
+}
+.title {
+  text-align: center;
+  font-size: 2em;
+  margin: 0 0 1em;
+  clear: left;
+}
+.home {
+  padding: 3em 0;
+  background: #fefefe;
+  width: 940px;
+  margin: 0 auto;
+}
+.home p {
+  margin: 0 0 1em;
+}
+.home b {
+  font-weight: bold;
+}
+.home em {
+  font-style: italic;
+}
+.utensils {
+  width: 120px;
+  float: left;
+  margin: 0 20px 20px 0;
+}
+/*================== map ==========================*/
+.map {
+  padding: 3em 0;
+  background: linear-gradient(#fefefe, #888888);
+}
+
+.map-content {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.map p {
+  margin: 0 0 2rem;
+  text-align: center;
+}
+/*==================content==========================*/
+.container {
+  background: #888888;
+  padding: 3em 0;
+}
+.content {
+  width: 640px;
+  margin: 0 auto;
+}
+.content-itens {
+  width: 40%;
+  display: inline-block;
+  vertical-align: top;
+}
+.content-img {
+  width: 60%;
+  opacity: 1;
+  transition: 400ms;
+  box-shadow: 10px 10px 10px 0 var(--black);
+}
+
+/*==================itens==========================*/
+.itens {
+  line-height: 1.5;
+}
+
+.itens:first-child {
+  font-weight: bold;
+}
+
+.itens:before {
+  content: '🟊';
+}
+.content-img {
+  width: 60%;
+  opacity: 1;
+  transition: 400ms;
+  box-shadow: 10px 10px 10px 0 #000000;
+}
+.content-img:hover {
+  opacity: 0.3;
+}
+/*============================================*/
+.video {
+  width: 560px;
+  margin: 2em auto;
+}
+@media screen and (max-widht: 480px) {
+  .box,
+  .container,
+  .content-itens,
+  .map-content,
+  .video {
+    width: auto;
+  }
+  h1 {
+    text-align: center;
+  }
+  nav {
+    position: static;
+  }
+  .content-itens,
+  .content-img {
+    width: 100%;
+  }
 }
